# libxiv

./: CMakeLists.txt  README.md
include/: cmpparser.h  compression.h  crc32checksum.h  equipment.h  exdparser.h  exhparser.h  exlparser.h  gamedata.h  havokxmlparser.h  indexparser.h  installextract.h  language.h  mdlparser.h  memorybuffer.h  patch.h  sqpack.h  string_utils.h  utility.h
include/types/: race.h  slot.h
src/: compression.cpp  crc32.cpp  crc32checksum.cpp  equipment.cpp  exdparser.cpp  exhparser.cpp  exlparser.cpp  fiinparser.cpp  gamedata.cpp  havokxmlparser.cpp  indexparser.cpp  installextract.cpp  mdlparser.cpp  memorybuffer.cpp  patch.cpp  sqpack.cpp  types.cpp
